datalab_api/manifests/hub/hub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
  labels:
    component: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      component: jupyter
  template:
    metadata:
      labels:
        component: jupyter
    spec:
      serviceAccountName: hub
      containers:
        - name: hub
          # image: kienmn97/jupyter-hub:1.1.0
          #image: jupyterhub/k8s-hub:3.0.0-0.dev.git.6143.h246f1f0c
          image: jupyterhub/k8s-hub:4.3.3
          #image: ghcr.io/aidaph/jupyterhub:4.3.3-datalabauth-1
          imagePullPolicy: Always
          #command: ["jupyterhub", "--config", "/usr/local/etc/jupyterhub/jupyterhub_config.py","--upgrade-db"]
          command:
            - jupyterhub

          args:
            - --config
            - /usr/local/etc/jupyterhub/jupyterhub_config.py
            - --upgrade-db
            
          ports:
            - containerPort: 8081
          # Secrets come from the per-namespace "hub-secret" created by the API.
          # HUB_BASE_DOMAIN and KEYCLOAK_REALM_URL are appended by the API too.
          volumeMounts:
            - mountPath: /usr/local/etc/jupyterhub/jupyterhub_config.py
              subPath: jupyterhub_config.py
              name: config
            - mountPath: /usr/local/etc/jupyterhub/z2jh.py
              name: config
              subPath: z2jh.py
            - mountPath: /usr/local/etc/jupyterhub/config/
              name: config
            # - mountPath: /usr/local/etc/jupyterhub/secret/
            #   name: secret
            - mountPath: /srv/jupyterhub
              name: hub-db-dir
          # resources:
          #   requests:
          #     cpu: 100m
      securityContext:
        fsGroup: 0
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: hub
        #- name: config
        #  configMap:
        #    name: hub-config
        # - name: secret
        #   secret:
        #     secretName: hub-secret
        - name: hub-db-dir
          persistentVolumeClaim:
            claimName: hub-db-dir
