datalab_api/manifests/hub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: REPLACE_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
  tls:
    - hosts:
        - REPLACE_HOST
      secretName: cert-secret
